Added basic routing config for navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,15 @@
     {{ title }}
   </h1>
 </div>
+<div class='container'>
+  <div><button>Top Crimes</button></div>  <div><button>Top Players for Crime</button></div>  <div><button>Top Teams for Crime</button></div>
 
+</div>
+
+
+
+<!--
 <app-top-crimes></app-top-crimes>
 <app-top-players></app-top-players>
 <app-top-teams></app-top-teams>
-<router-outlet></router-outlet>
+--><router-outlet></router-outlet>
