--- a/src/app/crime/top-players/top-players.component.html
+++ b/src/app/crime/top-players/top-players.component.html
@@ -1,7 +1,7 @@
 <div style="padding: 10px; font-family: sans-serif; font-size: 1.2em; font-weight: bold">
   <div class='card' style="margin: 10px;max-height: 100%;overflow:auto">
       <div class='card-header'>
-          Top Players
+          Top Players for Crime
       </div>
       <div class='card-body'>
           <div class='row'>
